--- a/static/app/drinkingwater.html
+++ b/static/app/drinkingwater.html
@@ -56,12 +56,11 @@
       <svg version="1.1" xmlns="http://www.w3.org/2000/svg">
       <circle class="stroke" cx="60" cy="60" r="50"/>
     </svg>
+    </div>
     <div>
       <form action=#>
         <textarea></textarea>
     </div>
-
-
     </div>
 
   <div class="card">
