--- a/static/CashewNutEnt/index.html
+++ b/static/CashewNutEnt/index.html
@@ -592,25 +592,25 @@ OVERVIEW <br>
 <h2>ECONOMIC PERFORMANCE</h2>
 
 <div>
- Estimates deemed realistic by NCM this new unit will generate a turnover of approximately 1.2m Jarife Nut Enterprises in the first year: then grow to 1.8m JNET then 60m in the fifth year with a net profit after tax and interest of about 500,000 in the first year, raising to 15m in the fifth year, The project shows an IRR of about 100% and a positive NPV at a rate a discount of 15% which correspond to the interest rate charged by most banks.
+Estimates deemed realistic by NCM this new unit will generate a turnover of approximately 1.2m Jarife Nut Enterprises in the first year: then grow to 1.8m JNET then 60m in the fifth year with a net profit after tax and interest of about 500,000 in the first year, raising to 15m in the fifth year, The project shows an IRR of about 100% and a positive NPV at a rate a discount of 15% which correspond to the interest rate charged by most banks.
 </div>
 
 <div>
- The cumulative CAPEX for the first year is estimated at US$15,000 and US$16,000 first year as follows:
+The cumulative CAPEX for the first year is estimated at US$15,000 and US$16,000 first year as follows:
 </div>
 
 <ul>
- <li>New building and warehouse……………… us $1500
- <li>Equipment…………………………………………………………… us $4000
- <li>Raw materials………………………………………………… us $5000
- <li>Rent………………………………………………………………………… us $1200
- <li>Light……………………………………………………………………… us $500
- <li>Transport…………………………………………………………… us $1000
- <li>Labor……………………………………………………………………… us $2000
- <li>Marketing…………………………………………………………… us $500
- <li>Misc………………………………………………………………………… us $1000
-   <li>………………………………………………………………………………………………………… 
- <li>Total…………………………Approx…………………………… us$15,000
+<li>New building and warehouse……………… us $1500
+<li>Equipment…………………………………………………………… us $4000
+<li>Raw materials………………………………………………… us $5000
+<li>Rent………………………………………………………………………… us $1200
+<li>Light……………………………………………………………………… us $500
+<li>Transport…………………………………………………………… us $1000
+<li>Labor……………………………………………………………………… us $2000
+<li>Marketing…………………………………………………………… us $500
+<li>Misc………………………………………………………………………… us $1000
+<li>………………………………………………………………………………………………………… 
+<li>Total…………………………Approx…………………………… us$15,000
 </ul>
 
 
@@ -619,7 +619,7 @@ OVERVIEW <br>
 <h2>Working with small businesses</h2>
 
 <div>
- Large corporations might enjoy great success with an ROI of 10% or even less. Because small business owners usually have to take more risks, most business experts advise buyers of typical small companies to look for an ROI between 15 and 30 percent.
+Large corporations might enjoy great success with an ROI of 10% or even less. Because small business owners usually have to take more risks, most business experts advise buyers of typical small companies to look for an ROI between 15 and 30 percent.
 </div>
 
 
