--- a/static/peacewater_form/index.html
+++ b/static/peacewater_form/index.html
@@ -58,7 +58,7 @@
     <div class="button col-sm">  
       <input type="radio" name="watersystem" value="wastewater" id="wastewater">
       <label for="wastewater">
-        <div class="labeltext">Drinking water</div>
+        <div class="labeltext">Wastewater</div>
       </label>
  
     </div>
