--- a/static/peacewater_form/index.html
+++ b/static/peacewater_form/index.html
@@ -154,9 +154,9 @@
      <BR>              
    <select id="project_technical_capacity">
     <option> Select one 
-    <option value="no_tech_support_avail"> no tecnical support available 
+    <option value="no_tech_support_avail"> no technical support available 
     <option value="limited_tech_support"> limited support available 
-    <option value="consultant_retained"> retained consultant
+    <option value="consultant_retained"> consultant retained
     <option value="staff_tech"> staff technician 
     <option value="staffed_with_multiple_technicians"> staffed with multiple techicians 
   </select>  
@@ -169,7 +169,7 @@
     <div class="col-sm">
       <label>Contact Person</label>
       <br>
-      <input type="text" name="project_contact_person" id="project_contact_person"  placeholder="Contact Person" size=45>
+      <input type="text" name="project_contact_person" id="project_contact_person"  placeholder="Contact Person" size=55>
       <br><br>
     </div>
   </div>
@@ -184,11 +184,14 @@
   <div class="row">
     <div class="col-sm">
   
-    <input id="agree" type="checkbox" name="checkbox" value="check"> I have read and agree to the <a href="/terms">Terms and Conditions </a> span and <a href="/privacy">Privacy Policy</a>
+    <input id="agree" type="checkbox" name="checkbox" value="check"> I have read and agree to the<br>
+    <a href="/terms">Terms and Conditions </a> and <a href="/privacy">Privacy Policy</a>
+    
     </div>
   </div>
   <div class="row">
     <div class="col-sm">
+      <BR>
     <input type="submit" value="Submit">
 
     </div>
@@ -197,7 +200,10 @@
   
 
 </form>
-  
+        <BR>
+        <BR>    
+        <BR>      
+        <BR>
 
 
              
