--- a/static/peacewater_form/index.html
+++ b/static/peacewater_form/index.html
@@ -111,7 +111,7 @@
   
   <label> Local Climate </label>
     <br>
-     <select id="project_funding">
+     <select id="local_climate">
     <option> Select one
     <option value="equatorial"> Equatorial
        <option value="equatorial"> Subtropcal
