--- a/static/peacewater_form/index.html
+++ b/static/peacewater_form/index.html
@@ -202,6 +202,13 @@
 <!-- partial -->
   <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script>
+    
+    $( document ).ready(function() {
+       console.log( "ready!" );
+       .DrinkingwaterServiceOptions.style.display = 'none';
+       .MunicipalsolidwasteServiceOptions.style.display = 'none';
+       .WastewaterServiceOptions.style.display = 'none';
+    });
    
     $("#btnSubmit").click(function (event) {
  
