--- a/static/peacewater_form/index.html
+++ b/static/peacewater_form/index.html
@@ -109,17 +109,11 @@
     <div class="row">
     <div class="col-sm">
   
-  <label> Local Climate </label>
+  <label> Climate </label>
     <br>
-     <select id="local_climate">
-    <option> Select one
-    <option value="equatorial"> Equatorial
-       <option value="equatorial"> Subtropcal
-    <option value="tropical"> Tropical    
-    <option value="moderate_funding"> moderate
-    <option value="northern"> Northern
-   <option value="arctic"> Arctic
-    </select>
+      <input type="checkbox" id="min_temp_extreme"> Temperature may drop below freezing
+  <BR>
+  <BR>
     </div>
     <div class="col-sm">
      <label> Funding capacity</label>
