--- a/static/peacewater_form/index.html
+++ b/static/peacewater_form/index.html
@@ -199,9 +199,9 @@
     
     $( document ).ready(function() {
        console.log( "ready!" );
-       .DrinkingwaterServiceOptions.style.display = 'none';
-       .MunicipalsolidwasteServiceOptions.style.display = 'none';
-       .WastewaterServiceOptions.style.display = 'none';
+      $(".DrinkingwaterServiceOptions").style.display = 'none';
+      $(".MunicipalsolidwasteServiceOptions").style.display = 'none';
+      $(".WastewaterServiceOptions.style").display = 'none';
     });
    
     $("#btnSubmit").click(function (event) {
