--- a/static/peacewater_form/index.html
+++ b/static/peacewater_form/index.html
@@ -72,7 +72,7 @@
 
     </div>
     
-    <div class="row" name="DrinkingwaterServiceOptions"
+    <div class="row" name="DrinkingwaterServiceOptions">
     <div class="col-md">
     
           Drinking water service options
