--- a/static/curate/index.html
+++ b/static/curate/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - table search bootstrap accordion</title>
+  <title>PEACEWATER DATA PORTAL</title>
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.1/css/bootstrap.css'><link rel="stylesheet" href="./style.css">
 
 </head>
@@ -12,7 +12,7 @@
     <input type="text" class="search form-control" placeholder="What you looking for?">
 </div>
 <span class="counter pull-right"></span>
-<table class="table table-hover table-bordered results">
+<table class="table table-hover table-bordered results" style="width:90%">
   <thead>
     <tr>
       
