--- a/static/curate/index.html
+++ b/static/curate/index.html
@@ -10,8 +10,8 @@
 <body>
 
   <div class="container">
+    <img src=https://raw.githubusercontent.com/SustainableCommunityDevelopmentHub/hugo_site/master/static/curate/logo-white2.png>
   <!-- partial:index.partial.html -->
-
     <div class="form-group pull-right">
     <input type="text" class="search form-control" placeholder="What you looking for?">
     </div>
