--- a/static/curate/index.html
+++ b/static/curate/index.html
@@ -10,8 +10,12 @@
 <body>
 
   <div class="container">
-    <img src=https://raw.githubusercontent.com/SustainableCommunityDevelopmentHub/hugo_site/master/static/curate/peacewater_header.jpg><a class="btn btn-info" href="buildproject.html">Build a Project</a><a class="btn btn-info" href="researchatopic.html">Research a topic</a>
-  <!-- partial:index.partial.html -->
+        <img src=https://raw.githubusercontent.com/SustainableCommunityDevelopmentHub/hugo_site/master/static/curate/peacewater_header.jpg><a class="btn btn-info" href="buildproject.html">Build a Project</a><a class="btn btn-info" href="researchatopic.html">Research a topic</a>
+        <!-- partial:index.partial.html -->
+        <div><a class="btn btn-info btn-large" href="#">Volunteer</a></div>
+        <div><a class="btn btn-info btn-small" href="#">Projects</a></div>
+        <div><a class="btn btn-info disabled" href="#">Water Topics</a></div>
+    
     <div class="form-group pull-right">
     <input type="text" class="search form-control" placeholder="What you looking for?">
     </div>
