--- a/static/curate/index.html
+++ b/static/curate/index.html
@@ -10,7 +10,7 @@
 <body>
 
   <div class="container">
-          <div class="row"><div class="col"><img src=https://raw.githubusercontent.com/SustainableCommunityDevelopmentHub/hugo_site/master/static/curate/peacewater_header.jpg><a class="btn btn-info" href="buildproject.html">Build a Project</a><BR><a class="btn btn-info" href="researchatopic.html">Research a topic</a></div></div>
+          <div class="row"><div class="col"><img src=https://raw.githubusercontent.com/SustainableCommunityDevelopmentHub/hugo_site/master/static/curate/peacewater_header.jpg><BR><a class="btn btn-info" href="buildproject.html">Build a Project</a><BR><a class="btn btn-info" href="researchatopic.html">Research a topic</a></div></div>
        <!-- partial:index.partial.html -->
     
     <div class="form-group pull-right">
