--- a/static/curate/index.html
+++ b/static/curate/index.html
@@ -25,6 +25,11 @@
 <area shape="rect" coords="898,15,1089,109" href="start.html" />
 </map>
     
+      <!-- partial:index.partial.html -->
+    <div class="form-group pull-right">
+    <input type="text" class="search form-control" placeholder="What you looking for?">
+    </div>
+    
 <span class="counter pull-right"></span>
 <table class="table table-hover table-bordered results" style="width:90%">
   <thead>
