--- a/static/curate/start.html
+++ b/static/curate/start.html
@@ -10,8 +10,20 @@
 <body>
 
   <div class="container">
-          <div class="row"><div class="col"><img src=https://raw.githubusercontent.com/SustainableCommunityDevelopmentHub/hugo_site/master/static/curate/peacewater_header.jpg><BR><a class="btn btn-info" href="buildproject.html">Build a Project</a><BR><a class="btn btn-info" href="researchatopic.html">Research a topic</a></div></div>
+          <div class="row"><div class="col"><img src=https://raw.githubusercontent.com/SustainableCommunityDevelopmentHub/hugo_site/master/static/curate/peacewater_header.jpg usemap="#map" ></div></div>
        <!-- partial:index.partial.html -->
+        <map name="map">
+        <!-- #$-:Image map file created by GIMP Image Map plug-in -->
+        <!-- #$-:GIMP Image Map plug-in by Maurits Rijk -->
+        <!-- #$-:Please do not edit lines starting with "#$" -->
+        <!-- #$VERSION:2.3 -->
+        <!-- #$AUTHOR:Greg Willson -->
+        <area shape="rect" coords="88,16,308,106" alt="Peacewater Link" href="peacewater.link" />
+        <area shape="rect" coords="322,13,405,110" alt="Drinking Water" href="drinkingwater.html" />
+        <area shape="rect" coords="406,13,534,109" href="solidwaste.html" />
+        <area shape="rect" coords="535,13,646,111" href="wastewater_sewage.html" />
+        <area shape="rect" coords="898,15,1089,109" href="start.html" />
+        </map>
     
     <div class="form-group pull-right">
     <input type="text" class="search form-control" placeholder="What you looking for?">
