--- a/static/curate/start.html
+++ b/static/curate/start.html
@@ -29,7 +29,7 @@
     
     Search tjhe solutions database:
     <BR>
-                 <iframe src="https://scdhub-g1eny-ecwo.vercel.app/" width="640" height="3721" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+                 <iframe src="https://scdhub-g1eny-ecwo.vercel.app/" width="100%" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
     <BR>
     Suggest a resource for inclusion: 
     <BR>
