--- a/static/curate/start.html
+++ b/static/curate/start.html
@@ -27,7 +27,7 @@
     
        Search the solutions database:
        <BR>
-    <iframe src="https://scdhub-g1eny-ecwo.vercel.app/" width="100%" height="100%" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+    <iframe src="https://scdhub-g1eny-ecwo.vercel.app/" width="100%" height="3400" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
        <BR>
        Suggest a resource for inclusion:
          
