--- a/static/curate/index.html
+++ b/static/curate/index.html
@@ -62,7 +62,21 @@
     </div>
     <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
       <div class="card-body">
-        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+ 
+Machakos , Kenya open burn abatement 
+<BR>
+Desired outcomes
+<ul>
+    <li>Human health 
+    <li>Source Water pollution prevention
+    <li>Air quality improvement 
+    <li>Equitable business model 
+    <li>Creation of green jobs
+    <li>infrastructure for solid waste
+</ul>
+  
+  
+   sustainable VHS.
       </div>
     </div>
   </div>
@@ -92,7 +106,29 @@
     </div>
     <div id="collapse3" class="collapse" aria-labelledby="heading3" data-parent="#accordion">
       <div class="card-body">
-        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+      
+       Njiru, Black river project 
+
+       Desired outcomes
+
+       - community awareness 
+
+    - regulation of industrial pollution 
+
+    - settled storage of sewage
+
+    - change sewage into river norm 
+
+    - feature arts in social change
+
+    - stop fecal to oral transmission
+
+    - incentivize action at local level
+
+    - empower small stakeholders 
+
+    - coalition building 
+      
       </div>
     </div>
   </div>
