--- a/static/curate/index.html
+++ b/static/curate/index.html
@@ -63,7 +63,7 @@
     <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
       <div class="card-body">
  
-Machakos , Kenya open burn abatement 
+Machakos , Kenya
 <BR>
 Desired outcomes
 <ul>
@@ -74,6 +74,25 @@ Desired outcomes
     <li>Creation of green jobs
     <li>infrastructure for solid waste
 </ul>
+  
+  <b>status:<b>
+  
+ <blockquote>Organizing at the local level for sorting and shipping 
+  of waste economy exists intermittently between machiakos 
+  and nairobi.  
+   Buring of waste is common as reported by local partner C.Mbinda Mwende, 
+  
+ 
+  New markets are opening up for sorted waste 
+  platics market as new products are made from the material. 
+  From fuel, paver briquettes, 3d printer material, everyday products.
+  </blockquote> 
+   
+   
+   </td>
+
+  
+  
       </div>
     </div>
   </div>
@@ -86,7 +105,7 @@ Desired outcomes
         
         
       </td>
-      <td>Project is in the planning & discussion phase. Organizing at the local level for sorting and shipping of waste economy exists intermittently between machiakos and nairobi.  New markets are opening up for sorted waste platics market as new products are made from the material. From fuel, paver briquettes, 3d printer material, merchandise.</td>
+      <td>Project is in the planning & discussion phase.</td>
       <td>plastic to fuel, plastic recycling chippers, platsic to pavers, deluge of platic waste in africa</td>
     </tr>
     <tr>
