--- a/static/curate/index.html
+++ b/static/curate/index.html
@@ -109,7 +109,6 @@ Desired outcomes
       <td>plastic to fuel, plastic recycling chippers, platsic to pavers, deluge of platic waste in africa</td>
     </tr>
     <tr>
-      <th scope="row">2</th>
       <td>  <div class="accordion" id="accordion">
  
           <div class="card">
@@ -143,22 +142,19 @@ Desired outcomes
     </div>
   </div>
           
-          
   </div></td>
-      <td>Software Developer</td>
-      <td>Istanbul</td>
+      <td>City-wide awareness campaign</td>
+      <td>Njiru Nairobib, Kenya</td>
     </tr>
     <tr>
-      <th scope="row">3</th>
-      <td>Egemen Özbeyli</td>
-      <td>Purchasing</td>
-      <td>Kocaeli</td>
+      <td>biogas digester</td>
+      <td>Bedoian Community</td>
+      <td></td>
     </tr>
     <tr>
-      <th scope="row">4</th>
-      <td>Engin Kızıl</td>
-      <td>Sales</td>
-      <td>Bozuyük</td>
+      <td>Community Composting Support</td>
+      <td>undw</td>
+      <td>nederland, CO</td>
     </tr>
   </tbody>
 </table>
