--- a/static/curate/applied_research.html
+++ b/static/curate/applied_research.html
@@ -22,7 +22,7 @@
 <area shape="rect" coords="322,13,405,110" alt="Drinking Water" href="drinkingwater.html" />
 <area shape="rect" coords="406,13,534,109" href="solidwaste.html" />
 <area shape="rect" coords="535,13,646,111" href="wastewater_sewage.html" />
-<area shape="rect" coords="898,15,1089,109" href="projects.html" />
+<area shape="rect" coords="898,15,1089,109" href="applied_research.html" />
 </map>
     
     
