Update and rename start.html to index.html

--- a/static/curate/index.html
+++ b/static/curate/index.html
@@ -18,11 +18,11 @@
         <!-- #$-:Please do not edit lines starting with "#$" -->
         <!-- #$VERSION:2.3 -->
         <!-- #$AUTHOR:Greg Willson -->
-        <area shape="rect" coords="88,16,308,106" alt="Peacewater Link" href="peacewater.link" />
+        <area shape="rect" coords="88,16,308,106" alt="Peacewater Link" href="index.html" />
         <area shape="rect" coords="322,13,405,110" alt="Drinking Water" href="drinkingwater.html" />
         <area shape="rect" coords="406,13,534,109" href="solidwaste.html" />
         <area shape="rect" coords="535,13,646,111" href="wastewater_sewage.html" />
-        <area shape="rect" coords="898,15,1089,109" href="start.html" />
+        <area shape="rect" coords="898,15,1089,109" href="applied_research.html" />
         </map>
     
        Search the solutions database:
