--- a/static/curate/index.html
+++ b/static/curate/index.html
@@ -10,7 +10,7 @@
 <body>
 
   <div class="container">
-        <div class="row"><div class="col"><img src=https://raw.githubusercontent.com/SustainableCommunityDevelopmentHub/hugo_site/master/static/curate/peacewater_head.jpg usemap="#map" ></div></div>
+        <div class="row"><div class="col"><img src=https://raw.githubusercontent.com/SustainableCommunityDevelopmentHub/hugo_site/master/static/curate/peacewater_head_nav_.jpg usemap="#map" h="885" height="139" border="0"></div></div>
         <!-- partial:index.partial.html -->
         <map name="map">
         <!-- #$-:Image map file created by GIMP Image Map plug-in -->
@@ -23,6 +23,10 @@
         <area shape="rect" coords="406,13,534,109" href="solidwaste.html" />
         <area shape="rect" coords="535,13,646,111" href="wastewater_sewage.html" />
         <area shape="rect" coords="898,15,1089,109" href="applied_research.html" />
+        <area shape="rect" coords="20,99,156,136" href="projects.html" />
+        <area shape="rect" coords="163,98,257,138" href="topics.html" />
+        <area shape="rect" coords="283,101,406,139" href="concept.html" />
+        <area shape="rect" coords="427,102,572,136" href="get-involved.html" />
         </map>
     
        Search the solutions database:
