--- a/static/curate/solidwaste.html
+++ b/static/curate/solidwaste.html
@@ -10,7 +10,7 @@
 <body>
 
   <div class="container">
-        <div class="row"><div class="col"><img src=https://raw.githubusercontent.com/SustainableCommunityDevelopmentHub/hugo_site/master/static/curate/peacewater_head.jpg usemap="#map" ></div></div>
+        <div class="row"><div class="col"><img src=https://raw.githubusercontent.com/SustainableCommunityDevelopmentHub/hugo_site/master/static/curate/peacewater_head_nav_.jpg usemap="#map" h="885" height="139" border="0"></div></div>
         <!-- partial:index.partial.html -->
         <map name="map">
         <!-- #$-:Image map file created by GIMP Image Map plug-in -->
@@ -18,11 +18,15 @@
         <!-- #$-:Please do not edit lines starting with "#$" -->
         <!-- #$VERSION:2.3 -->
         <!-- #$AUTHOR:Greg Willson -->
-        <area shape="rect" coords="88,16,308,106" alt="Peacewater Link" href="peacewater.link" />
+        <area shape="rect" coords="88,16,308,106" alt="Peacewater Link" href="index.html" />
         <area shape="rect" coords="322,13,405,110" alt="Drinking Water" href="drinkingwater.html" />
         <area shape="rect" coords="406,13,534,109" href="solidwaste.html" />
         <area shape="rect" coords="535,13,646,111" href="wastewater_sewage.html" />
-        <area shape="rect" coords="898,15,1089,109" href="start.html" />
+        <area shape="rect" coords="898,15,1089,109" href="applied_research.html" />
+        <area shape="rect" coords="30,105,147,131" href="projects.html" />
+        <area shape="rect" coords="160,104,259,132" href="topics.html" />
+        <area shape="rect" coords="281,103,402,134" href="concept.html" />
+        <area shape="rect" coords="429,103,605,133" href="get-involved.html" />
         </map>
     
        Search the solutions database:
