--- a/static/curate/topics.html
+++ b/static/curate/topics.html
@@ -1,6 +1,5 @@
-
   <div class="container">
-        <div class="row"><div class="col"><img src=https://raw.githubusercontent.com/SustainableCommunityDevelopmentHub/hugo_site/master/static/curate/peacewater_head_nav_.jpg usemap="#map" h="885" height="139" border="0"></div></div>
+        <div class="row"><div class="col"><img src="https://raw.githubusercontent.com/SustainableCommunityDevelopmentHub/hugo_site/master/static/curate/peacewater_header_nav_.jpg" usemap="#map" h="885" height="139" border="0"></div></div>
         <!-- partial:index.partial.html -->
         <map name="map">
         <!-- #$-:Image map file created by GIMP Image Map plug-in -->
@@ -18,6 +17,7 @@
         <area shape="rect" coords="281,103,402,134" href="concept.html" />
         <area shape="rect" coords="429,103,605,133" href="get-involved.html" />
         </map>
+    
     
        Search the solutions database:
        <BR>
