--- a/static/curate/topics.html
+++ b/static/curate/topics.html
@@ -21,7 +21,7 @@
     
        Search the solutions database:
        <BR>
-    <iframe src="https://scdhub-g1eny-ecwo.vercel.app/tags" width="100%" height="3721" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+    <iframe src="https://scdhub.org/tag/" width="100%" height="3721" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 
       <a name="background"></a>
     <H2>Project Information Form</h>
