--- a/static/curate/index.html
+++ b/static/curate/index.html
@@ -10,7 +10,7 @@
 <body>
 
   <div class="container">
-        <div class="row"><div class="col"><img src="https://raw.githubusercontent.com/SustainableCommunityDevelopmentHub/hugo_site/master/static/curate/peacewater_header_nav_.jpg" usemap="#map" h="885" height="139" border="0"></div></div>
+        <div class="row"><div class="col"><img src="https://raw.githubusercontent.com/SustainableCommunityDevelopmentHub/hugo_site/master/static/curate/peacewater_header_nav_.jpg" usemap="header.map" h="885" height="139" border="0"></div></div>
         <!-- partial:index.partial.html -->
         <map name="map">
         <!-- #$-:Image map file created by GIMP Image Map plug-in -->
