--- a/static/curate/solidwaste.html
+++ b/static/curate/solidwaste.html
@@ -10,7 +10,7 @@
 <body>
 
   <div class="container">
-        <div class="row"><div class="col"><img src=https://raw.githubusercontent.com/SustainableCommunityDevelopmentHub/hugo_site/master/static/curate/peacewater_head_nav_.jpg usemap="#map" h="885" height="139" border="0"></div></div>
+        <div class="row"><div class="col"><img src="https://raw.githubusercontent.com/SustainableCommunityDevelopmentHub/hugo_site/master/static/curate/peacewater_header_nav_.jpg" usemap="header.map" width="885" height="139" border="0"></div></div>
         <!-- partial:index.partial.html -->
         <map name="map">
         <!-- #$-:Image map file created by GIMP Image Map plug-in -->
@@ -29,7 +29,8 @@
         <area shape="rect" coords="429,103,605,133" href="get-involved.html" />
         </map>
     
-       Search the solutions database:
+    
+       Solid Waste Solutions
        <BR>
     <iframe src="https://scdhub-g1eny-ecwo.vercel.app/" width="100%" height="3721" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 
