--- a/static/curate/topics.html
+++ b/static/curate/topics.html
@@ -1,4 +1,19 @@
-  <div class="container">
+
+<!DOCTYPE html>
+<html lang="en" >
+<head>
+  <meta charset="UTF-8">
+  <title>PEACEWATER DATA PORTAL - TOPICS</title>
+  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.1/css/bootstrap.css'><link rel="stylesheet" href="./style.css">
+  <script src="https://cdn.lr-ingest.io/LogRocket.min.js" crossorigin="anonymous"></script>
+  <script>window.LogRocket && window.LogRocket.init('hir9az/peacewater');</script>
+</head>
+<body>
+
+
+
+
+<div class="container">
         <div class="row"><div class="col"><img src="https://raw.githubusercontent.com/SustainableCommunityDevelopmentHub/hugo_site/master/static/curate/peacewater_header_nav_.jpg" usemap="#map" h="885" height="139" border="0"></div></div>
         <!-- partial:index.partial.html -->
         <map name="map">
