--- a/static/curate/concept.html
+++ b/static/curate/concept.html
@@ -33,7 +33,7 @@
 <!-- partial -->
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.1/js/bootstrap.js'></script><script  src="./script.js"></script>
-https://www.youtube.com/favicon.ico
+
     <a name="projectinfo"></a>
     <H2>Get Involved</h2>
     
@@ -54,37 +54,37 @@ https://www.youtube.com/favicon.ico
     
     <ul>
       <li>Waste stream Pyrolysis <a href="https://en.wikipedia.org/wiki/Special:Search?search=waste+stream+pyrolysis&go=Go&ns0=1"><img 
-        src=https://en.wikipedia.org/favicon.ico" width=16 height=16 border=0></a> <a href="https://www.youtube.com/results?search_query=waste+stream+pyrolysis"><img 
+        src="https://en.wikipedia.org/favicon.ico" width=16 height=16 border=0></a> <a href="https://www.youtube.com/results?search_query=waste+stream+pyrolysis"><img 
       src="https://www.youtube.com/favicon.ico" width=16 height=16 border=0></a> </li>
     <li>Solid and human waste Composting <a href="https://en.wikipedia.org/wiki/Special:Search?search=Solid+and+human+waste+Composting&go=Go&ns0=1"><img 
-        src=https://en.wikipedia.org/favicon.ico" width=16 height=16 border=0></a> <a href="https://www.youtube.com/results?search_query=Solid+and+human+waste+Composting"><img 
+        src="https://en.wikipedia.org/favicon.ico" width=16 height=16 border=0></a> <a href="https://www.youtube.com/results?search_query=Solid+and+human+waste+Composting"><img 
       src="https://www.youtube.com/favicon.ico" width=16 height=16 border=0></a> </li>
     <li>Gasefier technology <a href="https://en.wikipedia.org/wiki/Special:Search?search=gasefier+technology&go=Go&ns0=1"><img 
-        src=https://en.wikipedia.org/favicon.ico"  width=16 height=16 border=0></a> <a href="https://www.youtube.com/results?search_query=gasefier+technology"><img 
+        src="https://en.wikipedia.org/favicon.ico"  width=16 height=16 border=0></a> <a href="https://www.youtube.com/results?search_query=gasefier+technology"><img 
       src="https://www.youtube.com/favicon.ico" width=16 height=16 border=0></a> </li>
     <li>Plastics to compressed products <a href="https://en.wikipedia.org/wiki/Special:Search?search=plastics+to+compressed+products&go=Go&ns0=1"><img 
-        src=https://en.wikipedia.org/favicon.ico"  width=16 height=16 border=0></a> <a href="https://www.youtube.com/results?search_query=plastics+to+compressed+products"><img 
+        src="https://en.wikipedia.org/favicon.ico"  width=16 height=16 border=0></a> <a href="https://www.youtube.com/results?search_query=plastics+to+compressed+products"><img 
       src="https://www.youtube.com/favicon.ico" width=16 height=16 border=0></a> </li>
     <li>Chipped plastics to extruded products <a href="https://en.wikipedia.org/wiki/Special:Search?search=chipped+plastics+to+extreuded+products&go=Go&ns0=1"><img 
-        src=https://en.wikipedia.org/favicon.ico"  width=16 height=16 border=0></a> <a href="https://www.youtube.com/results?search_query=chipped+plastics+to+extreuded+products"><img 
+        src="https://en.wikipedia.org/favicon.ico"  width=16 height=16 border=0></a> <a href="https://www.youtube.com/results?search_query=chipped+plastics+to+extreuded+products"><img 
       src="https://www.youtube.com/favicon.ico" width=16 height=16 border=0></a> </li>
     <li>Materials transit for sorted recycled materials <a href="https://en.wikipedia.org/wiki/Special:Search?search=materials+transit+for+sorted+recycled+materials&go=Go&ns0=1"><img 
         src=https://en.wikipedia.org/favicon.ico"  width=16 height=16 border=0></a> <a href="https://www.youtube.com/results?search_query=materials+transit+for+sorted+recycled+materials"><img 
       src="https://www.youtube.com/favicon.ico" width=16 height=16 border=0></a> </li>
     <li>Storage and shipping management for social enterprises <a href="https://en.wikipedia.org/wiki/Special:Search?search=social+enterprise+skills+trainings&go=Go&ns0=1"><img 
-        src=https://en.wikipedia.org/favicon.ico"  width=16 height=16 border=0></a> <a href="https://www.youtube.com/results?search_query=social+enterprise+skills+trainings"><img 
+        src="https://en.wikipedia.org/favicon.ico"  width=16 height=16 border=0></a> <a href="https://www.youtube.com/results?search_query=social+enterprise+skills+trainings"><img 
       src="https://www.youtube.com/favicon.ico" width=16 height=16 border=0></a> </li>
     <li>Small group plastic sorting business model <a href="https://en.wikipedia.org/wiki/Special:Search?search=Small+group+plastic+sorting+business+model&go=Go&ns0=1"><img 
-        src=https://en.wikipedia.org/favicon.ico"  width=16 height=16 border=0></a> <a href="https://www.youtube.com/results?search_query=Small+group+plastic+sorting+business+model"><img 
+        src="https://en.wikipedia.org/favicon.ico"  width=16 height=16 border=0></a> <a href="https://www.youtube.com/results?search_query=Small+group+plastic+sorting+business+model"><img 
       src="https://www.youtube.com/results?search_query=small+group+plastic+sorting+business+model" border=0></a> </li>
     <li>Local product creation workshops <a href="https://en.wikipedia.org/wiki/Special:Search?search=Local+product+creation+workshops&go=Go&ns0=1"><img 
-        src=https://en.wikipedia.org/favicon.ico"  width=16 height=16 border=0></a> <a href="https://www.youtube.com/results?search_query=Local+product+creation+workshops"><img 
+        src="https://en.wikipedia.org/favicon.ico"  width=16 height=16 border=0></a> <a href="https://www.youtube.com/results?search_query=Local+product+creation+workshops"><img 
       src="https://www.youtube.com/favicon.ico" width=16 height=16 border=0></a> </li>
     <li>Waste stream derived, repaired, cleaned & remanufactured products <a href="https://en.wikipedia.org/wiki/Special:Search?search=Waste+stream+derived+repaired+cleaned+remanufactured+products&go=Go&ns0=1"><img 
-        src=https://en.wikipedia.org/favicon.ico"  width=16 height=16 border=0></a> <a href="https://www.youtube.com/results?search_query=Waste+stream+derived+repaired+cleaned+remanufactured+products"><img 
+        src="https://en.wikipedia.org/favicon.ico"  width=16 height=16 border=0></a> <a href="https://www.youtube.com/results?search_query=Waste+stream+derived+repaired+cleaned+remanufactured+products"><img 
       src="https://www.youtube.com/favicon.ico" width=16 height=16 border=0></a> </li>
     <li>Social enterprise skills trainings <a href="https://en.wikipedia.org/wiki/Special:Search?search=social+enterprise+skills+trainings&go=Go&ns0=1"><img 
-        src=https://en.wikipedia.org/favicon.ico" width=16 height=16 border=0></a> <a href="https://www.youtube.com/results?search_query=social+enterprise+skills+trainings"><img 
+        src="https://en.wikipedia.org/favicon.ico" width=16 height=16 border=0></a> <a href="https://www.youtube.com/results?search_query=social+enterprise+skills+trainings"><img 
       src="https://www.youtube.com/favicon.ico" width=16 height=16 border=0></a> </li>
     </ul>
       <h2>Other Topics</h2>
