--- a/static/curate/index.html
+++ b/static/curate/index.html
@@ -23,7 +23,7 @@
         <area shape="rect" coords="406,13,534,109" href="solidwaste.html" />
         <area shape="rect" coords="535,13,646,111" href="wastewater_sewage.html" />
         <area shape="rect" coords="898,15,1089,109" href="applied_research.html" />
-        <area shape="rect" coords="30,105,147,131" href="projects.html" />
+        <area shape="rect" coords="30,105,147,131" href="applied_research.html" />
         <area shape="rect" coords="160,104,259,132" href="topics.html" />
         <area shape="rect" coords="281,103,402,134" href="concept.html" />
         <area shape="rect" coords="429,103,605,133" href="get-involved.html" />
