--- a/static/curate/projects.html
+++ b/static/curate/projects.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>PEACEWATER DATA PORTAL</title>
+  <title>PEACEWATER PROJECTS & CASE STUDIES DATA PORTAL</title>
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.1/css/bootstrap.css'><link rel="stylesheet" href="./style.css">
   <script src="https://cdn.lr-ingest.io/LogRocket.min.js" crossorigin="anonymous"></script>
   <script>window.LogRocket && window.LogRocket.init('hir9az/peacewater');</script>
