--- a/static/curate/concept.html
+++ b/static/curate/concept.html
@@ -42,9 +42,9 @@
     </div>    
     <ul>
        <li> Drinking water<BR>
-            <img src="https://raw.githubusercontent.com/SustainableCommunityDevelopmentHub/hugo_site/master/static/images/drinking_water_supply.jpg" width="867" height="175" border="0" usemap="#map" />
+            <img src="https://raw.githubusercontent.com/SustainableCommunityDevelopmentHub/hugo_site/master/static/images/drinking_water_supply.jpg" width="867" height="175" border="0" usemap="#map2" />
 
-<map name="map">
+<map name="map2">
 <!-- #$-:Image map file created by GIMP Image Map plug-in -->
 <!-- #$-:GIMP Image Map plug-in by Maurits Rijk -->
 <!-- #$-:Please do not edit lines starting with "#$" -->
