--- a/static/curate/applied_research.html
+++ b/static/curate/applied_research.html
@@ -11,7 +11,7 @@
 
   <div class="container">
         
-    <img src="https://raw.githubusercontent.com/SustainableCommunityDevelopmentHub/hugo_site/master/static/curate/peacewater_header.jpg" width="1094" height="111" border="0" usemap="headerlinks.map" />
+    <img src="https://raw.githubusercontent.com/SustainableCommunityDevelopmentHub/hugo_site/master/static/curate/peacewater_header_nav_case-studies_invovment_.png" width="1094" height="111" border="0" usemap="headerlinks.map" />
     <map name="map">
 <!-- #$-:Image map file created by GIMP Image Map plug-in -->
 <!-- #$-:GIMP Image Map plug-in by Maurits Rijk -->
