--- a/static/curate/projects.html
+++ b/static/curate/projects.html
@@ -11,7 +11,7 @@
 
   <div class="container">
         
-    <img src="https://raw.githubusercontent.com/SustainableCommunityDevelopmentHub/hugo_site/master/static/curate/peacewater_header_nav_.jpg" border="0" usemap="#map" />
+    <img src="https://raw.githubusercontent.com/SustainableCommunityDevelopmentHub/hugo_site/master/static/curate/peacewater_header_nav_case-studies_invovment_.png" border="0" usemap="#map" />
     <map name="map">
 <!-- #$-:Image map file created by GIMP Image Map plug-in -->
 <!-- #$-:GIMP Image Map plug-in by Maurits Rijk -->
