--- a/static/curate/concept.html
+++ b/static/curate/concept.html
@@ -36,20 +36,11 @@
 
     <div class="headertext" style="max-width=885px;"><a name="projectinfo"></a>
       <BR>
-    <H2>Get Involved</h2>
+    Peacewater Solutions Database provides reference for best practives in the areas of Drinking Water Supply, Solid Waste Management, Wastewater/Sewage. 
+
     <BR><BR>
   
     </div>    
-    <ul>
-       <li>
-          <div class="row">
-          <div class="button col-sm">
-             <input type="radio" name="watersystem" value="drinkingwater" id="drinkingwater">
-             <label for="drinkingwater">
-               <div class="labeltext">Drinking water</div>
-             </label>
-          </div>
-          </div>
         <BR>
             <img src="https://raw.githubusercontent.com/SustainableCommunityDevelopmentHub/hugo_site/master/static/images/drinking_water_supply.jpg" width="867" height="175" border="0" usemap="#map2" />
 
