--- a/static/curate/index.html
+++ b/static/curate/index.html
@@ -40,12 +40,13 @@
   </div>    
     
 <!-- partial -->
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js'></script>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.1/js/bootstrap.js'></script><script  src="./script.js"></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.1/js/bootstrap.js'></script><script  src="./script.js"></script>
 
     <a name="projectinfo"></a>
     <H2>Project Information Form</h>
-    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdnFeEVRs3g2T4ny4f6OEo2FfW-nj_nVHI-nhMzoH6I0Om5wg/viewform?embedded=true" width="640" height="3721" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdnFeEVRs3g2T4ny4f6OEo2FfW-nj_nVHI-nhMzoH6I0Om5wg/viewform?embedded=true" width="640" height="3721" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdnFeEVRs3g2T4ny4f6OEo2FfW-nj_nVHI-nhMzoH6I0Om5wg/viewform?embedded=true" width="640" height="3721" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>  
+
 </body>
 </html>
 
