--- a/content/creative/mindmap-ramiro.html
+++ b/content/creative/mindmap-ramiro.html
@@ -1,23 +1,36 @@
 --- 
 layout: post 
-title: Underground water retention structures 
+title: WET Mindmap
 cat:
-- water-retention-stuctures
+- peace-engineering
 tag:
-- underground-dams
-- hydrology
-youtubeid: NbunlN5nYzM
-headerimage: pump1.jpg
+- water
+- energy
+- telecommunications
+- mindmap
 date: 2021-06-10
 --- 
 
-# underground water retention structures
+# Water Energy and Telecommunications - Mind Map
+
+<div class="sidebar-section">
+    <input id="search-query" placeholder="Search" />
+</div>
+<div id="search-results" style="display:none;"></div>
+<div id="sidebars">
+    ...
+</div>
+
+<hr>
+--
+<script src="/js/search.js"></script>
 
 
-<amp-youtube width="480" height="270" layout="responsive" data-videoid="lBTCB7yLs8Y">
+
+<amp-youtube width="480" height="270" layout="responsive" data-videoid="V8YGax8FVyo">
 </amp-youtube>
 
-<img src="WET_mindmap_draft1_peaceengineering_ramiro-jordan.png" width="887" height="580" border="0" usemap="#map" />
+<img src="/WET_mindmap_draft1_peaceengineering_ramiro-jordan.png" width="887" height="580" border="0" usemap="#map" />
 
 <map name="map">
 <!-- #$-:Image map file created by GIMP Image Map plug-in -->
