Update and rename content/soln/carbon_trading_in_transportation.md.html to content/carbon-credits/carbon_trading_in_transportation.md.html

--- a/content/carbon-credits/carbon_trading_in_transportation.md.html
+++ b/content/carbon-credits/carbon_trading_in_transportation.md.html
@@ -1,6 +1,6 @@
 --- 
 layout: post 
-title: Carbon Trading in Transportation
+title: Carbon Trading - Transportation of Carbon for Sequestation
 cat:
 - carbon trading
 tag:
@@ -13,7 +13,7 @@ tag:
 - Purdue-class-of-2025
 date: 2021-11-17
 --- 
-# Carbon Trading in Transportation
+# Unless carbon is removed during an industrial process, the carbob economy requires that carbon be transported to where it is sequestered.
 
 
 Once captured, carbon dioxide must be transported from its source to a storage site.
